# GaussianDistribution

./: .pypirc  Gaussiandistribution.py  Generaldistribution.py  README.md  __init__.py  example_code.py  how.txt  setup.cfg  setup.py
binomial_distribution/: Binomialdistribution.py  Binomialdistribution_challenge.py
distributions/: Gaussiandistribution.py
gaussian_distribution/: Gaussiandistribution.py  __init__.py  gaussian_class.py
